--- a/tgc/templates/form.html
+++ b/tgc/templates/form.html
@@ -5,6 +5,7 @@
 
 {% block css %}
 	{% include 'statics/css.html' %}
+	<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block topnavbar %}
@@ -26,7 +27,7 @@
 						{% csrf_token %}
 						<!-- description -->
 						<p>
-						Hello! WE would like to find out more about your preferences to ensure that you have a wonderful and fulfilling experience with us. This checklist will help to frame an idea of the dream gown that you are looking for. Sit back, relax and enjoy while you take time to ponder on your dream gown!
+						Hello! We would like to find out more about your preferences to ensure that you have a wonderful and fulfilling experience with us. This checklist will help to frame an idea of the dream gown that you are looking for. Sit back, relax and enjoy while you take time to ponder on your dream gown!
 						</p>
 
 						<!-- main form -->
@@ -199,4 +200,24 @@
 
 {% block bottomjs %}
 	{% include 'statics/bottomjs.html' %}
+	<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
+	<script>
+    $(function () {
+        $('#{{ formfields.eventdate1.id_for_label }}').datepicker({
+        	uiLibrary: 'bootstrap4',
+            format:'dd-mm-yyyy'
+        });
+
+        $('#{{ formfields.eventdate2.id_for_label }}').datepicker({
+        	uiLibrary: 'bootstrap4',
+            format:'dd-mm-yyyy'
+        });
+
+        console.log();
+    });
+
+
+	</script>
+
 {% endblock %}
