--- a/tgc/templates/form.html
+++ b/tgc/templates/form.html
@@ -23,7 +23,7 @@
 
 				
 				<div class="d-flex flex-row justify-content-center my-3">
-					<div class="col-10">
+					<div class="col-10 col-sm-12 col-md-12">
 						{% csrf_token %}
 						<!-- description -->
 						<p>
