adjusted no of gowns selector

--- a/tgc/templates/form.html
+++ b/tgc/templates/form.html
@@ -127,8 +127,10 @@
 								<div class="col-4 border border-dark pb-2">
 									
 									<div class="m-1 my-2">No. of gowns required:</div>
-									<div class="d-flex justify-content-center">
-										{{ formfields.noofgowns }}
+									<div class="d-flex justify-content-center align-items-center align-self-center w-100">
+								
+											{{ formfields.noofgowns }}
+									
 									</div>
 								</div>
 							</div>
