--- a/tgc/templates/form.html
+++ b/tgc/templates/form.html
@@ -184,12 +184,21 @@
 							<div class="col-12 border border-dark">
 								<div class="m-1 my-2">Preferred Neckline: </div>
 
-									<div class="d-flex w-100">
+
+									<div class="d-flex w-100 flex-wrap">
 									{% for box in formfields.preferredNeckline %}
-										<label class="d-flex mx-1 flex-fill justify-content-center align-items-center" for="{{ box.id_for_label }}">
-											<span class="mx-2 align-middle">{{ box.choice_label }}</span>
-											<span class="radio align-middle">{{ box.tag }}</span>
-										</label>
+										<div class="d-flex flex-column col-3 p-0 my-3 align-items-center" for="{{ box.id_for_label }}">
+
+											<div class="d-flex my-1 w-100 justify-content-center align-items-center">
+												<span class="mx-2 align-middle">{{ box.choice_label }}</span>
+												<span class="radio align-middle">{{ box.tag }}</span>
+											</div>
+
+											{% with 'images/'|add:box.choice_label|add:'.png' as image_path %}
+											<img class="" src="{% static image_path %}" style="height:75%;">
+											{% endwith %}
+
+										</div>
 									{% endfor %}
 									</div>
 
