edited manual customer update button text

--- a/tgc/templates/form.html
+++ b/tgc/templates/form.html
@@ -292,7 +292,7 @@
 								<span class="mr-auto">Update GS Customer Details Manually:</span>
 								<input id="customernuminputbox" class="mr-2" type="number" name="customer number" placeholder="Customer Number">
 								<button id="gs_updatecustomer_btn" onclick="updatecustomerings();"
-							class="btn btn-danger">&nbsp;Update Order in GS&nbsp;</button>
+							class="btn btn-danger">&nbsp;Update Customer in GS&nbsp;</button>
 							</div>
 							<div id="manualupdatecustomercardbody" class="card-body collapse">
 								
